fullSandbox11072023/force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>ABN field limited to 11 characters.</description>
    <inlineHelpText>An ABN should only be 11 characters in length</inlineHelpText>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>