fullSandbox11072023/force-app/main/default/objects/Account/fields/Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Details__c</fullName>
    <formula>SAP_Sold_To__c &amp; &quot; - &quot; &amp; 
BillingStreet &amp; &quot; &quot; &amp; 
BillingCity &amp; &quot; &quot; &amp; 
BillingState &amp; &quot; &quot; &amp;
BillingPostalCode &amp; &quot; &quot; &amp;
BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Details</label>
    <type>Text</type>
</CustomField>