fullSandbox11072023/force-app/main/default/objects/Account/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <label>Account Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>