fullSandbox11072023/force-app/main/default/objects/Account/fields/Account_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Group_Name__c</fullName>
    <description>IF(Account_Group__c = &quot;Z001&quot;,&quot;Sold-To (Z001)&quot;, 
IF(Account_Group__c = &quot;Z002&quot;,&quot;Ship-To (Z002)&quot;, 
IF(Account_Group__c = &quot;ZREB&quot;,&quot;Indirect (ZREB)&quot;, 
IF(Account_Group__c = &quot;ZTSP&quot;,&quot;Territory (ZTSP)&quot;, 
IF(Account_Group__c = &quot;ZTSY&quot;,&quot;Territory (ZTSY)&quot;, 
&quot;&quot; 
)))))</description>
    <formula>IF(Account_Group__c = &quot;Z001&quot;,&quot;Sold-To (Z001)&quot;, 
IF(Account_Group__c = &quot;Z002&quot;,&quot;Ship-To (Z002)&quot;, 
IF(Account_Group__c = &quot;ZREB&quot;,&quot;Indirect (ZREB)&quot;, 
IF(Account_Group__c = &quot;ZTSP&quot;,&quot;Territory (ZTSP)&quot;, 
IF(Account_Group__c = &quot;ZTSY&quot;,&quot;Territory (ZTSY)&quot;,
IF(Account_Group__c = &quot;ZGRP&quot; &amp;&amp; CONTAINS(SAP_Sold_To__c, &quot;IDN&quot;) ,&quot;IDN (ZGRP)&quot;,
IF(Account_Group__c = &quot;ZGRP&quot; &amp;&amp; CONTAINS(SAP_Sold_To__c, &quot;GPO&quot;) ,&quot;GPO (ZGRP)&quot;,
&quot;&quot; 
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Group Name</label>
    <type>Text</type>
</CustomField>