fullSandbox11072023/force-app/main/default/objects/Account/fields/Active_Sales__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales__c</fullName>
    <description>Sales_by_BU_Key__c is built every day as part of the daily Invoiced Sales ETL. 
Apex: account_Active_Sales
Scheduled Apex: Invoiced_Sales_Maintenance_Scheduler changed to account_Active_Sales_check</description>
    <formula>Sales_by_BU_Key__c != NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account has Sales from this Year or Last</inlineHelpText>
    <label>Active Sales</label>
    <type>Checkbox</type>
</CustomField>