fullSandbox11072023/force-app/main/default/objects/Account/fields/Active_Sales_My_BU__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales_My_BU__c</fullName>
    <description>Sales_by_BU_Key__c is built every day as part of the daily Invoiced Sales ETL. 
Apex: account_Active_Sales
Scheduled Apex: Invoiced_Sales_Maintenance_Scheduler</description>
    <formula>CONTAINS(Sales_by_BU_Key__c,  $User.Business_Unit_Key__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account has Sales related to My Business Unit from this Year or Last</inlineHelpText>
    <label>Active Sales My BU</label>
    <type>Checkbox</type>
</CustomField>