fullSandbox11072023/force-app/main/default/objects/Account/fields/Agreement_Count__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Count__c</fullName>
    <label>Agreement Count</label>
    <summaryForeignKey>Contract_Customer__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>