fullSandbox11072023/force-app/main/default/objects/Account/fields/ANZ_Account__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify accounts migrated from AU Instance.</description>
    <inlineHelpText>Used to identify accounts migrated from AU Instance.</inlineHelpText>
    <label>ANZ Account</label>
    <type>Checkbox</type>
</CustomField>