fullSandbox11072023/force-app/main/default/objects/Account/fields/BedCountSize__c.field-meta.xml
<CustomField>
    <fullName>BedCountSize__c</fullName>
    <description>Used Primarily by Vascular</description>
    <label>Bed Count/Size:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;100</fullName>
            </value>
            <value>
                <fullName>100-200</fullName>
            </value>
            <value>
                <fullName>201-300</fullName>
            </value>
            <value>
                <fullName>301-400</fullName>
            </value>
            <value>
                <fullName>401-500</fullName>
            </value>
            <value>
                <fullName>501-600</fullName>
            </value>
            <value>
                <fullName>601-700</fullName>
            </value>
            <value>
                <fullName>701-800</fullName>
            </value>
            <value>
                <fullName>801-900</fullName>
            </value>
            <value>
                <fullName>901-1000</fullName>
            </value>
            <value>
                <fullName>&gt;1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>