fullSandbox11072023/force-app/main/default/objects/Account/fields/Billing_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Full__c</fullName>
    <formula>If(BillingCity != &apos;&apos;, BillingStreet + BR() +
BillingCity+ &quot;, &quot;+ BillingState + &quot; &quot; + BillingPostalCode + &quot; &quot; + BillingCountry, &apos;&apos;)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>