fullSandbox11072023/force-app/main/default/objects/Account/fields/BP__c.field-meta.xml
<CustomField>
    <fullName>BP__c</fullName>
    <description>Vidacare Business Partner number</description>
    <externalId>true</externalId>
    <label>BP #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>