fullSandbox11072023/force-app/main/default/objects/Account/fields/Budget_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cycle__c</fullName>
    <label>Budget Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>