fullSandbox11072023/force-app/main/default/objects/Account/fields/Cath_Lab__c.field-meta.xml
<CustomField>
    <fullName>Cath_Lab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this account has a Cath Lab.</description>
    <inlineHelpText>Check this box if this account has a Cath Lab.</inlineHelpText>
    <label>Cath Lab</label>
    <type>Checkbox</type>
</CustomField>