fullSandbox11072023/force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <inlineHelpText>2 Digit Customer Group Number.</inlineHelpText>
    <label>Customer Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>