fullSandbox11072023/force-app/main/default/objects/Account/fields/Customer_Group_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Formula__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Customer_Group_Name__c)),
NOT(ISBLANK(Customer_Group__c))
), Customer_Group_Name__c &amp; &quot; (&quot; &amp; Customer_Group__c &amp; &quot;)&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>