fullSandbox11072023/force-app/main/default/objects/Account/fields/delete__c.field-meta.xml
<CustomField>
    <fullName>delete__c</fullName>
    <description>for west extract</description>
    <label>delete</label>
    <length>10</length>
    <type>Text</type>
</CustomField>