fullSandbox11072023/force-app/main/default/objects/Account/fields/Distributor_Name_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name_Last_Update__c</fullName>
    <inlineHelpText>Used to manage when a name has not been updated and should be removed.</inlineHelpText>
    <label>Distributor Name Last Update</label>
    <type>DateTime</type>
</CustomField>