fullSandbox11072023/force-app/main/default/objects/Account/fields/Do_not_Show_in_RR__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Show_in_RR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the Latam Sales Target Report (Rainbow Report) to consolidate Mexican accounts in the Other bucket</description>
    <label>Do not Show in RR</label>
    <type>Checkbox</type>
</CustomField>