fullSandbox11072023/force-app/main/default/objects/Account/fields/ECENTA_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ECENTA_Timestamp__c</fullName>
    <description>Field used to capture time of a workflow rule whenever changes happen on an Account record to specific fields checked in the workflow rule criteria.

Workflow Rule Name: Account data has changed</description>
    <inlineHelpText>Field used to capture time of a workflow rule whenever changes happen on an Account record to specific fields checked in the workflow rule criteria.

Workflow Rule Name: Account data has changed</inlineHelpText>
    <label>ECENTA Timestamp</label>
    <type>DateTime</type>
</CustomField>