fullSandbox11072023/force-app/main/default/objects/Account/fields/Emergency__c.field-meta.xml
<CustomField>
    <fullName>Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the hospital has an emergency department.</description>
    <inlineHelpText>Check this box if the hospital has an emergency department.</inlineHelpText>
    <label>Emergency</label>
    <type>Checkbox</type>
</CustomField>