fullSandbox11072023/force-app/main/default/objects/Account/fields/ERP_Active__c.field-meta.xml
<CustomField>
    <fullName>ERP_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is updated as part of the Daily Data Load from the ERP system. Any Active Customers will have a Value of True (checked).</description>
    <inlineHelpText>When this box is checked, the account is an active customer in the ERP System.</inlineHelpText>
    <label>Active in SAP</label>
    <type>Checkbox</type>
</CustomField>