fullSandbox11072023/force-app/main/default/objects/Account/fields/Free_Freight_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Free_Freight_Threshold__c</fullName>
    <label>Free Freight Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>