fullSandbox11072023/force-app/main/default/objects/Account/fields/Go_Deep__c.field-meta.xml
<CustomField>
    <fullName>Go_Deep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An account can be marked as Top Account</description>
    <inlineHelpText>Mark it as Top Account</inlineHelpText>
    <label>Go Deep</label>
    <type>Checkbox</type>
</CustomField>