fullSandbox11072023/force-app/main/default/objects/Account/fields/Group_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Area_Name__c</fullName>
    <description>The name of the group or health district the hospital belongs to below the state level, eg: Sydney LHD, Metro North Hospitals Board etc.</description>
    <label>Group Area Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthecare</fullName>
            </value>
            <value>
                <fullName>Healthscope</fullName>
            </value>
            <value>
                <fullName>NSW - Central Coast LHD</fullName>
            </value>
            <value>
                <fullName>NSW - Hunter New England LHD</fullName>
            </value>
            <value>
                <fullName>NSW - Mid North Coast LHD</fullName>
            </value>
            <value>
                <fullName>NSW - South Eastern Sydney LHD</fullName>
            </value>
            <value>
                <fullName>NSW - Southern LHD</fullName>
            </value>
            <value>
                <fullName>NSW - South West Sydney LHD</fullName>
            </value>
            <value>
                <fullName>NSW - Sydney LHD</fullName>
            </value>
            <value>
                <fullName>NSW - Western NSW LHD</fullName>
            </value>
            <value>
                <fullName>NSW - Western Sydney</fullName>
            </value>
            <value>
                <fullName>QLD - Metro North Hospitals Board</fullName>
            </value>
            <value>
                <fullName>QLD - Metro South Hospitals Board</fullName>
            </value>
            <value>
                <fullName>Ramsay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>