fullSandbox11072023/force-app/main/default/objects/Account/fields/Health_System_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Health_System_Affiliation__c</fullName>
    <label>Health System Affiliation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>