fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IDN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IDN Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>