fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN_Account_HQ__c.field-meta.xml
<CustomField>
    <fullName>IDN_Account_HQ__c</fullName>
    <label>Account HQ</label>
    <length>64</length>
    <type>Text</type>
</CustomField>