fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN_Number__c.field-meta.xml
<CustomField>
    <fullName>IDN_Number__c</fullName>
    <label>IDN #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>