fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN_Region__c.field-meta.xml
<CustomField>
    <fullName>IDN_Region__c</fullName>
    <label>IDN Region (Pick List)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region 5</fullName>
            </value>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 12</fullName>
            </value>
            <value>
                <fullName>Region 8</fullName>
            </value>
            <value>
                <fullName>Region 6</fullName>
            </value>
            <value>
                <fullName>Region 4</fullName>
            </value>
            <value>
                <fullName>Region 10</fullName>
            </value>
            <value>
                <fullName>Region 11</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
            <value>
                <fullName>Region 3</fullName>
            </value>
            <value>
                <fullName>Region 7</fullName>
            </value>
            <value>
                <fullName>Region 9</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Region 13</fullName>
            </value>
            <value>
                <fullName>Region 14</fullName>
            </value>
            <value>
                <fullName>Region 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>