fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN_Region_from_IDN_Acct__c.field-meta.xml
<CustomField>
    <fullName>IDN_Region_from_IDN_Acct__c</fullName>
    <formula>TEXT(IDN__r.IDN_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field from IDN Account</inlineHelpText>
    <label>IDN Region (Formula)</label>
    <type>Text</type>
</CustomField>