fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>IDN_Region_Text__c</fullName>
    <description>Field for workflow rule to populate for criteria based sharing rule to be written off of.</description>
    <inlineHelpText>Field for workflow rule to populate for criteria based sharing rule to be written off of.</inlineHelpText>
    <label>IDN Region (Text)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>