fullSandbox11072023/force-app/main/default/objects/Account/fields/IDN_Y_N__c.field-meta.xml
<CustomField>
    <fullName>IDN_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDN Y/N?</label>
    <type>Checkbox</type>
</CustomField>