fullSandbox11072023/force-app/main/default/objects/Account/fields/Ignore_this_Account__c.field-meta.xml
<CustomField>
    <fullName>Ignore_this_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore this Account?</label>
    <type>Checkbox</type>
</CustomField>