fullSandbox11072023/force-app/main/default/objects/Account/fields/Incoterms_1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_1__c</fullName>
    <description>EMEA field Pricing Portal.</description>
    <inlineHelpText>EMEA field Pricing Portal.</inlineHelpText>
    <label>Incoterms</label>
    <length>30</length>
    <type>Text</type>
</CustomField>