fullSandbox11072023/force-app/main/default/objects/Account/fields/Incoterms_2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_2__c</fullName>
    <description>EMEA field.</description>
    <inlineHelpText>EMEA field.</inlineHelpText>
    <label>Incoterms 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>