fullSandbox11072023/force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language added to Account Master file for Pricing Portal data loads.</description>
    <inlineHelpText>Language added to Account Master file for Pricing Portal data loads.</inlineHelpText>
    <label>Language</label>
    <length>30</length>
    <type>Text</type>
</CustomField>