fullSandbox11072023/force-app/main/default/objects/Account/fields/LatAm_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>LatAm_Account_Code__c</fullName>
    <externalId>true</externalId>
    <label>LatAm Account Code</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>