fullSandbox11072023/force-app/main/default/objects/Account/fields/Latam_Master_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Latam_Master_SAP_ID__c</fullName>
    <label>Latam Master SAP ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>