fullSandbox11072023/force-app/main/default/objects/Account/fields/LegacySurgicalRep__c.field-meta.xml
<CustomField>
    <fullName>LegacySurgicalRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy Surgical Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>