fullSandbox11072023/force-app/main/default/objects/Account/fields/List_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Type__c</fullName>
    <formula>CASE(Price_List_Type__c, 
&quot;ZA&quot;, &quot;Alt Site (ZA)&quot;, 
&quot;ZD&quot;, &quot;Distributor (ZD)&quot;,
&quot;Hospital (ZH)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Type</label>
    <type>Text</type>
</CustomField>