fullSandbox11072023/force-app/main/default/objects/Account/fields/Main_GPO__c.field-meta.xml
<CustomField>
    <fullName>Main_GPO__c</fullName>
    <inlineHelpText>Primary group purchasing affiliation.</inlineHelpText>
    <label>Primary GPO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intralere</fullName>
            </value>
            <value>
                <fullName>Premier Purchasing Partners</fullName>
            </value>
            <value>
                <fullName>MedAssets Supply Chain Systems</fullName>
            </value>
            <value>
                <fullName>Vizient Inc.</fullName>
            </value>
            <value>
                <fullName>HealthTrust Purchasing Group</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>FirstChoice Cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>