fullSandbox11072023/force-app/main/default/objects/Account/fields/Net_Promoter_Score_NPS__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score_NPS__c</fullName>
    <formula>((NPS_Promoter_Sum__c - NPS_Detractor_Sum__c) / (NPS_Promoter_Sum__c + NPS_Neutral_Sum__c + NPS_Detractor_Sum__c)) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Promoter Score (NPS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>