fullSandbox11072023/force-app/main/default/objects/Account/fields/No_Beds_ICU_CCU__c.field-meta.xml
<CustomField>
    <fullName>No_Beds_ICU_CCU__c</fullName>
    <label>No. Beds ICU/CCU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>