fullSandbox11072023/force-app/main/default/objects/Account/fields/No_of_Theatres__c.field-meta.xml
<CustomField>
    <fullName>No_of_Theatres__c</fullName>
    <label>No. of Theatres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>