fullSandbox11072023/force-app/main/default/objects/Account/fields/NPS_Promoter_Sum__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter_Sum__c</fullName>
    <label>NPS Promoter Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>