fullSandbox11072023/force-app/main/default/objects/Account/fields/Number_Of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Beds__c</fullName>
    <label>No. of Beds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>500+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>