fullSandbox11072023/force-app/main/default/objects/Account/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <description>Old AccountId from AU Instance.</description>
    <inlineHelpText>Old AccountId from AU Instance.</inlineHelpText>
    <label>OldId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>