fullSandbox11072023/force-app/main/default/objects/Account/fields/OldParentId__c.field-meta.xml
<CustomField>
    <fullName>OldParentId__c</fullName>
    <description>Used to hold old parent Id of accounts migrated from another application.</description>
    <inlineHelpText>Used to hold old parent Id of accounts migrated from another application.</inlineHelpText>
    <label>OldParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>