fullSandbox11072023/force-app/main/default/objects/Account/fields/OnsiteSimulation__c.field-meta.xml
<CustomField>
    <fullName>OnsiteSimulation__c</fullName>
    <label>On-site Simulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>