fullSandbox11072023/force-app/main/default/objects/Account/fields/Open_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Value__c</fullName>
    <label>Open Opportunity Value</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>