fullSandbox11072023/force-app/main/default/objects/Account/fields/Original_Org__c.field-meta.xml
<CustomField>
    <fullName>Original_Org__c</fullName>
    <label>Original Org Cd</label>
    <length>18</length>
    <type>Text</type>
</CustomField>