fullSandbox11072023/force-app/main/default/objects/Account/fields/OtherVendorCredentialing__c.field-meta.xml
<CustomField>
    <fullName>OtherVendorCredentialing__c</fullName>
    <label>Other Vendor Credentialing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>